# Portfolio

./: README.md
Apps/EUROMILHOES-key-generator/: Euromilhoes.py
Apps/blind-auction/: MAIN.py  README.md
Apps/caeser cipher/: README.md
Apps/password-generator/: MAIN.py
CV/: CV_Afonso_Caboz.docx
Django/django-posts-website/myproject/: db.sqlite3  pyproject.toml
Django/django-posts-website/myproject/static/css/: style.css
Django/django-social-media/: db.sqlite3  pyproject.toml
Django/django-social-media/social_media/: settings.py
Games/blackjack/: MAIN.py
Games/rock-paper-scisor/: README.md
Games/treasure-hunt/: MAIN.py
Machine-Learning/Mathematical-Foundations/: Auto_differentiation.py  Eigendecomposition.py  Eigenvalues_and_Eigenvectors_2D.py  Eigenvalues_and_Eigenvectors_3D.py  Limits.py  Pseudoinverse.py  Single_value_decomposition.py  The_trace_operator.py
PseudoScript/: README.md
Python-Apps/calculator/: MAIN.py
Python-Games/SNAKE-game/: MAIN.py  README.md
Python-Games/blackjack/: README.md
Python-Games/kniffel/: main.py
Websites/Blog/: index.html  respostas.txt  style.css
Websites/Portfolio Website/: index.html  main.js  style.css
Websites/Working Contact Form - Web3 API/: index.html  style.css
apps/: MAIN.py
apps/caeser-cypher/: MAIN.py  README.md  art.py
apps/random-password-generator/: README.md
games/hangman/: MAIN.py  README.md
rock-paper-scisor/: MAIN.py
