[tool.poetry]
name = "django-social-media"
version = "0.1.0"
description = ""
authors = ["Afonso Caboz <afonso.caboz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
